namespaces/live-1.cloud-platform.service.justice.gov.uk/prison-to-probation-update-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prison-to-probation-update-prod
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "prod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "prison-to-probation-update"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/prison-to-probation-update.git"
